# SisCrystal

./: .gitignore  README.md  build-flatpak.sh  com.siscrystal.desktop.yml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy-pages.yml
scripts/: install_siscrystal.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AppLauncher.tsx  ConsoleWindow.tsx  FileManager.tsx  SettingsWindow.tsx  Widget.tsx  WindowWrapper.tsx
src/components/widgets/: CalendarWidget.tsx  ClockWidget.tsx  MusicControlWidget.tsx  TimeRemainingWidget.tsx  TodoWidget.tsx  TrainTimerWidget.tsx
src/types/: index.ts
